@@ -7,6 +7,7 @@ Fixes:
 New features:
  - Add alarm protocol (MODELER-567)
  - Update login page design (MODELER-568)
+ - Update download resources page (MODELER-569)
 
 Pro 1.3.0
 =========
